Bugfix : the tonite logo was not centered anymore

--- a/templates/less/header.less
+++ b/templates/less/header.less
@@ -34,7 +34,7 @@ header#mainHeader {
 
         .logo {
             display: inline-block;
-            vertical-align: -15%;
+            vertical-align: -3px;
 
             margin-left: @channelHorizontalMargin;
             margin-right: 2px;
